--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,10 @@
         <junit.version>5.11.2</junit.version>
         <gson.version>2.11.0</gson.version>
         <maven.surefire.version>3.5.0</maven.surefire.version>
+        <maven.surefire.report.version>3.5.2</maven.surefire.report.version>
         <maven.compiler.version>3.13.0</maven.compiler.version>
         <selenium-java.version>4.24.0</selenium-java.version>
-        <webdrivermanager.version>5.9.2</webdrivermanager.version>
+        <webdrivermanager.version>5.9.3</webdrivermanager.version>
         <lombok.version>1.18.36</lombok.version>
         <sqlite-jdbc.version>3.47.2.0</sqlite-jdbc.version>
     </properties>
@@ -77,6 +78,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${maven.surefire.report.version}</version>
+            </plugin>
         </plugins>
         <resources>
             <resource>
@@ -94,5 +100,13 @@
             </resource>
         </resources>
     </build>
-
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${maven.surefire.report.version}</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
