--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
+                    <parallel>classes</parallel>
+                    <threadCount>4</threadCount>
+                    <forkCount>4</forkCount>
+                    <reuseForks>true</reuseForks>
                     <reportsDirectory>${surefire.report.directory}</reportsDirectory>
                     <useFile>true</useFile>
                     <reportFormat>xml</reportFormat>
