--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>${junit.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-suite</artifactId>
             <version>${junit-platform.version}</version>
@@ -111,10 +117,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
-                    <parallel>classes</parallel>
-                    <threadCount>4</threadCount>
-                    <forkCount>4</forkCount>
-                    <reuseForks>true</reuseForks>
+<!--                    <parallel>classes</parallel>-->
+<!--                    <threadCount>4</threadCount>-->
+<!--                    <forkCount>4</forkCount>-->
+<!--                    <reuseForks>true</reuseForks>-->
                     <reportsDirectory>${surefire.report.directory}</reportsDirectory>
                     <useFile>true</useFile>
                     <reportFormat>xml</reportFormat>
@@ -123,11 +129,11 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>${maven.surefire.report.version}</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-surefire-report-plugin</artifactId>-->
+<!--                <version>${maven.surefire.report.version}</version>-->
+<!--            </plugin>-->
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
