Added step to single test workflow to upload allure report

--- a/.github/workflows/singletestdebug.yml
+++ b/.github/workflows/singletestdebug.yml
@@ -41,3 +41,12 @@ jobs:
 
       - name: Build and Run Tests with Maven
         run: mvn clean verify -Dtest=${{ github.event.inputs.testName }}
+
+      - name: Generate Allure Report
+        run: mvn allure:report
+
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: target/site/allure-maven-plugin
