--- a/pom.xml
+++ b/pom.xml
@@ -117,10 +117,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
-<!--                    <parallel>classes</parallel>-->
-<!--                    <threadCount>4</threadCount>-->
-<!--                    <forkCount>4</forkCount>-->
-<!--                    <reuseForks>true</reuseForks>-->
+                    <!--                    <parallel>classes</parallel>-->
+                    <!--                    <threadCount>4</threadCount>-->
+                    <!--                    <forkCount>4</forkCount>-->
+                    <!--                    <reuseForks>true</reuseForks>-->
                     <reportsDirectory>${surefire.report.directory}</reportsDirectory>
                     <useFile>true</useFile>
                     <reportFormat>xml</reportFormat>
@@ -129,15 +129,14 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-report-plugin</artifactId>-->
-<!--                <version>${maven.surefire.report.version}</version>-->
-<!--            </plugin>-->
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>${allure.maven.version}</version>
+                <configuration>
+                    <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
+                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>verify</phase>
