--- a/.github/workflows/singletestdebug.yml
+++ b/.github/workflows/singletestdebug.yml
@@ -1,4 +1,4 @@
-name: Run Single test
+name: Run Single Test and Publish Allure Report
 
 on:
   workflow_dispatch:
@@ -11,31 +11,39 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
       - name: Set up JDK 22
         uses: actions/setup-java@v4
         with:
           java-version: '22'
           distribution: 'temurin'
           cache: maven
+
       - name: Install Google Chrome
         run: |
           wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
           sudo apt install -y ./google-chrome-stable_current_amd64.deb
+
       - name: Run docker-compose
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ".docker/docker-compose.yaml"
+
       - name: Wait for services to be ready
         uses: jakejarvis/wait-action@master
         with:
           time: '20s'
+
       - name: Build and Run Tests with Maven
         run: mvn clean verify -Dtest=${{ github.event.inputs.testName }}
+
       - name: Generate Allure Report
         run: mvn allure:report
+
       - name: Upload Allure Report
         uses: actions/upload-artifact@v4
         with:
@@ -45,18 +53,28 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Download Allure report
         uses: actions/download-artifact@v4
         with:
           name: allure-report
           path: allure-report
 
+      - name: Check contents of allure-report
+        run: ls -R allure-report
+
       - name: Deploy Allure report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
           publish_dir: ./allure-report
           destination_dir: allure-report
+
+      - name: Print Report URL
+        run: |
+          echo "✅ Report URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure-report/"
