--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,10 @@
-name: Build, Spin up Docker container, Run Selenium Tests
+name: Run Full Test Suite and Publish Allure Report
 
 on:
   workflow_dispatch:
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,5 +33,88 @@ jobs:
         with:
           time: '20s'
 
-      - name: Build and Run Tests with Maven
-        run: mvn clean verify
+      - name: Run All Tests
+        run: mvn clean test
+
+      - name: Generate Allure Report
+        run: mvn allure:report
+
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: target/allure-report
+
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download Allure report
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-report
+          path: allure-report
+
+      - name: Check contents of allure-report
+        run: ls -R allure-report
+
+      - name: Deploy Full Allure report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./allure-report
+          destination_dir: all-reports/run-${{ github.run_id }}
+
+      - name: Generate dynamic index.html
+        run: |
+          mkdir -p site-root
+          cat > site-root/index.html <<'EOF'
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+            <meta charset="UTF-8" />
+            <title>Allure Reports Dashboard</title>
+            <style>
+              body { font-family: "Segoe UI", sans-serif; background: #f4f6f8; color: #333; margin: 0; padding: 2rem; }
+              .container { max-width: 800px; margin: auto; }
+              h1 { font-size: 2rem; color: #2c3e50; }
+              h2 { margin-top: 2rem; }
+              ul { list-style: none; padding-left: 0; }
+              li { margin: 0.5rem 0; }
+              a { color: #007acc; text-decoration: none; }
+              a:hover { color: #005a99; }
+              .tag { background: #e3f2fd; color: #0d47a1; font-size: 0.8rem; padding: 0.2rem 0.5rem; border-radius: 4px; margin-left: 0.5rem; }
+              .footer { margin-top: 3rem; font-size: 0.9rem; color: #888; }
+            </style>
+          </head>
+          <body><div class="container">
+            <h1>🧪 Allure Reports Dashboard</h1>
+            <h2>📘 Full Test Suite Reports</h2><ul>
+          EOF
+
+          for d in all-reports/run-*; do
+            echo "<li><a href=\"$d/index.html\" target=\"_blank\">$d</a> <span class=\"tag\">$d</span></li>" >> site-root/index.html
+          done
+
+          echo "</ul><h2>🎯 Single Test Reports</h2><ul>" >> site-root/index.html
+
+          for d in single-test-reports/*; do
+            echo "<li><a href=\"$d/index.html\" target=\"_blank\">$d</a> <span class=\"tag\">$d</span></li>" >> site-root/index.html
+          done
+
+          cat >> site-root/index.html <<'EOF'
+            </ul><div class="footer">Deployed with ❤️ by GitHub Actions</div></div></body></html>
+          EOF
+
+      - name: Deploy index.html to GitHub Pages root
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./site-root
+          destination_dir: .
