--- a/.github/workflows/singletestdebug.yml
+++ b/.github/workflows/singletestdebug.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           time: '20s'
 
-      - name: Build and Run Tests with Maven
+      - name: Run Selected Test
         run: mvn clean verify -Dtest=${{ github.event.inputs.testName }}
 
       - name: Generate Allure Report
@@ -67,14 +67,59 @@ jobs:
       - name: Check contents of allure-report
         run: ls -R allure-report
 
-      - name: Deploy Allure report to GitHub Pages
+      - name: Deploy Single Test Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./allure-report
-          destination_dir: allure-report
+          destination_dir: single-test-reports/${{ github.event.inputs.testName }}-${{ github.run_id }}
 
-      - name: Print Report URL
+      - name: Generate dynamic index.html
         run: |
-          echo "✅ Report URL: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allure-report/"
+          mkdir -p site-root
+          cat > site-root/index.html <<'EOF'
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+            <meta charset="UTF-8" />
+            <title>Allure Reports Dashboard</title>
+            <style>
+              body { font-family: "Segoe UI", sans-serif; background: #f4f6f8; color: #333; margin: 0; padding: 2rem; }
+              .container { max-width: 800px; margin: auto; }
+              h1 { font-size: 2rem; color: #2c3e50; }
+              h2 { margin-top: 2rem; }
+              ul { list-style: none; padding-left: 0; }
+              li { margin: 0.5rem 0; }
+              a { color: #007acc; text-decoration: none; }
+              a:hover { color: #005a99; }
+              .tag { background: #e3f2fd; color: #0d47a1; font-size: 0.8rem; padding: 0.2rem 0.5rem; border-radius: 4px; margin-left: 0.5rem; }
+              .footer { margin-top: 3rem; font-size: 0.9rem; color: #888; }
+            </style>
+          </head>
+          <body><div class="container">
+            <h1>🧪 Allure Reports Dashboard</h1>
+            <h2>📘 Full Test Suite Reports</h2><ul>
+          EOF
+
+          for d in all-reports/run-*; do
+            echo "<li><a href=\"$d/index.html\" target=\"_blank\">$d</a> <span class=\"tag\">$d</span></li>" >> site-root/index.html
+          done
+
+          echo "</ul><h2>🎯 Single Test Reports</h2><ul>" >> site-root/index.html
+
+          for d in single-test-reports/*; do
+            echo "<li><a href=\"$d/index.html\" target=\"_blank\">$d</a> <span class=\"tag\">$d</span></li>" >> site-root/index.html
+          done
+
+          cat >> site-root/index.html <<'EOF'
+            </ul><div class="footer">Deployed with ❤️ by GitHub Actions</div></div></body></html>
+          EOF
+
+      - name: Deploy index.html to GitHub Pages root
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./site-root
+          destination_dir: .
