--- a/.github/workflows/singletestdebug.yml
+++ b/.github/workflows/singletestdebug.yml
@@ -1,15 +1,10 @@
-name: Run Single Test and Publish Allure Report
+name: Run Full Test Suite and Publish Allure Report
 
 on:
   workflow_dispatch:
-    inputs:
-      testName:
-        description: 'Test class name'
-        required: true
-        default: 'EmptyLoginTest'
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -38,8 +33,8 @@ jobs:
         with:
           time: '20s'
 
-      - name: Run Selected Test
-        run: mvn clean verify -Dtest=${{ github.event.inputs.testName }}
+      - name: Run All Tests
+        run: mvn clean test
 
       - name: Generate Allure Report
         run: mvn allure:report
@@ -51,7 +46,7 @@ jobs:
           path: target/allure-report
 
   deploy:
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
@@ -64,15 +59,15 @@ jobs:
           name: allure-report
           path: allure-report
 
-      - name: Deploy Single Test Allure Report to GitHub Pages
+      - name: Deploy Full Allure report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: ./allure-report
-          destination_dir: single-test-reports/${{ github.event.inputs.testName }}-${{ github.run_id }}
+          destination_dir: all-reports/run-${{ github.run_id }}
 
-      - name: Deploy static index.html to GitHub Pages root
+      - name: Deploy enhanced static index.html to GitHub Pages root
         run: |
           mkdir -p site-root
           cat > site-root/index.html <<'EOF'
@@ -94,23 +89,33 @@ jobs:
           </head>
           <body>
             <h1>🧪 Allure Reports Dashboard</h1>
-            <h2>📘 Full Test Suite Reports</h2>
+            <h2 id="full-title">📘 Full Test Suite Reports</h2>
             <ul id="full-reports">Loading...</ul>
-            <h2>🎯 Single Test Reports</h2>
+            <h2 id="single-title">🎯 Single Test Reports</h2>
             <ul id="single-reports">Loading...</ul>
             <div class="footer">Auto-generated with ❤️ using GitHub Pages + JS</div>
             <script>
-              async function loadReports(basePath, targetId) {
+              async function loadReports(basePath, targetId, titleId) {
                 const listEl = document.getElementById(targetId);
+                const titleEl = document.getElementById(titleId);
+                listEl.innerHTML = "<li>Loading...</li>";
+
                 try {
                   const res = await fetch(`${basePath}`);
                   const html = await res.text();
-                  const matches = Array.from(html.matchAll(/href=\"([^\"]+)\//g));
-                  const folders = [...new Set(matches.map(m => m[1]))].filter(n => n.startsWith('run-') || !n.includes('.'));
-                  if (folders.length === 0) {
-                    listEl.innerHTML = '<li>No reports found.</li>';
+
+                  const matches = Array.from(html.matchAll(/href=\"([^\"?/]+)\//g));
+                  const folders = matches.map(m => m[1])
+                    .filter(name => name && !name.startsWith('.') && !name.endsWith('.html'));
+
+                  const count = folders.length;
+                  titleEl.innerText += ` (${count} available)`;
+
+                  if (count === 0) {
+                    listEl.innerHTML = '<li><em>No reports found.</em></li>';
                     return;
                   }
+
                   listEl.innerHTML = '';
                   folders.forEach(name => {
                     const li = document.createElement('li');
@@ -118,12 +123,13 @@ jobs:
                     listEl.appendChild(li);
                   });
                 } catch (e) {
-                  listEl.innerHTML = '<li>Error loading reports</li>';
+                  listEl.innerHTML = '<li><em>Error loading reports.</em></li>';
                   console.error(e);
                 }
               }
-              loadReports('all-reports/', 'full-reports');
-              loadReports('single-test-reports/', 'single-reports');
+
+              loadReports('all-reports/', 'full-reports', 'full-title');
+              loadReports('single-test-reports/', 'single-reports', 'single-title');
             </script>
           </body>
           </html>
