--- a/.github/workflows/singletestdebug.yml
+++ b/.github/workflows/singletestdebug.yml
@@ -64,6 +64,11 @@ jobs:
           name: allure-report
           path: allure-report
 
+      - name: Verify downloaded report content
+        run: |
+          echo "Contents of allure-report after download:"
+          ls -R allure-report
+
       - name: Deploy Single Test Allure Report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
@@ -71,6 +76,7 @@ jobs:
           publish_branch: gh-pages
           publish_dir: ./allure-report
           destination_dir: single-test-reports/${{ github.event.inputs.testName }}-${{ github.run_id }}
+          keep_files: true
 
       - name: Deploy enhanced static index.html to GitHub Pages root
         run: |
@@ -155,3 +161,4 @@ jobs:
           publish_branch: gh-pages
           publish_dir: ./site-root
           destination_dir: .
+          keep_files: true
